# Real-time-Voice-Translation-Pipeline-by-NEO

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  benchmark_report.txt  pyproject.toml  requirements.txt  run_verify.sh
data/: metadata.json
src/: __init__.py  benchmark.py  data_generator.py  e2e_test.py  loader.py  pipeline.py
